aws/fiware/waltid-wallet/deployment-ui.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: waltid-wallet
spec:
  selector:
    matchLabels:
      app.kubernetes.io/instance: waltid-wallet
      app.kubernetes.io/name: waltid-wallet
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: waltid-wallet
        app.kubernetes.io/name: waltid-wallet
    spec:
      containers:
      - name: ui
        image: 'waltid/waltid-web-wallet:latest'
        imagePullPolicy: Always
        ports:
          - containerPort: 3000
            name: http
      volumes:
        - name: cache
          emptyDir: {}
        - name: var
          emptyDir: {}
        - name: nginx
          configMap:
            name: waltid-wallet-ui
            items: 
              - key: nginx.conf
                path: nginx.conf
