aws/fiware/waltid-wallet/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: waltid-wallet-backend
spec:
  selector:
    matchLabels:
      app.kubernetes.io/instance: waltid-wallet-backend
      app.kubernetes.io/name: waltid-wallet-backend
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: waltid-wallet-backend
        app.kubernetes.io/name: waltid-wallet-backend
    spec:
      containers:
      - name: backend
        image: 'waltid/walletkit:latest'
        imagePullPolicy: Always
        ports:
          - containerPort: 8080
            name: http
        volumeMounts:
          - name: data
            mountPath: /app/data
      volumes:
        - name: data
          emptyDir: {}
