aws/fiware/waltid-wallet/service-ui.yaml
apiVersion: v1
kind: Service
metadata:
  name: waltid-wallet
spec:
  type: ClusterIP
  ports: 
    - name: http
      port: 3000
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/instance: waltid-wallet
    app.kubernetes.io/name: waltid-wallet
