aws/fiware/waltid-wallet/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: waltid-wallet-backend
spec:
  type: ClusterIP
  ports: 
    - name: static
      port: 8080
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/instance: waltid-wallet-backend
    app.kubernetes.io/name: waltid-wallet-backend
