aws/fiware/waltid-wallet/route-ui.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations: 
    cert-utils-operator.redhat-cop.io/certs-from-secret: waltid-wallet
  name: waltid-wallet-new
spec:
  host: walt-wallet.fiware.dev
  port:
    targetPort: 3000
  tls: 
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  to: 
    kind: Service
    name: waltid-wallet
